# RemoteCurl

./: .gitignore  README.md  config.json  demo.json  pyproject.toml  requirements.txt
remotecurl/: server.py  util.py
remotecurl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
remotecurl/.script/: common.js  link.js  navigation.js  request.js
remotecurl/app/: index.html
remotecurl/client/: client.py  main.py
remotecurl/common/: config.py  util.py
remotecurl/modifier/: abstract.py  css.py  html.py  js.py
remotecurl/requests/: cache.py  modifier.py
remotecurl/script/: common.js  common.util.js  common.web.js  navigation.js  request.js  window.js  window.min.js  window.wrapper.js  worker.js  worker.min.js  worker.wrapper.js  wrapper.js
remotecurl/server/: __server.py  cache.py  handler.py  server.py  session.py
remotecurl/support/: __init__.py
