[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "remotecurl"
version = "0.0.0"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools.package-data]
"*" = ["*.*"] # Include resources

[project]
name = "remotecurl"
version = "0.0.0"
authors = [
  { name="Wes-KW", email="dotdotdashdash2024@hotmail.com" },
]
dependencies = [
  ...
]
description = "RemoteCurl"
readme = "README.md"
requires-python = ">=3.5, <4"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Wes-KW/RemoteCurl"
Issues = "https://github.com/Wes-KW/RemoteCurl/issues"
